# archai-layout-workspace

./: .gitignore  NOTES.md  README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  base.py  crop_agent.py  evidence_store_agent.py  label_analysis_agent.py  ocr_agent.py  ocr_proofreader_agent.py  paleography_verification_agent.py  pipeline_placeholders.py  saia_ocr_agent.py  segmentation_agent.py
backend/scripts/: thesis_real_page_smoke.py  thesis_smoke_check.py
backend/tests/: test_audit_compliance.py  test_authority_linking.py  test_authority_linking_multisource.py  test_chat_api.py  test_evidence_store_agent.py  test_gate_enforcement.py  test_glm_ollama_ocr.py  test_label_analysis_agent.py  test_lexicon_trust.py  test_multiview.py  test_ocr_agent.py  test_ocr_agent_prompts_and_validation.py  test_ocr_backends.py  test_ocr_extract_full_page_api.py  test_ocr_language_detection.py  test_ocr_proofreader_agent.py  test_ocr_quality.py  test_paleography_verification_agent.py  test_pipeline_hardening_v2.py  test_proofreader_guard.py  test_rag_entity_index.py  test_rag_store.py  test_run_5241c606_regression.py  test_run_540fad29_regression.py  test_run_81ae066e_regression.py  test_run_91b3a986_regression.py  test_run_a49b676c_regression.py  test_run_cfb920bf_regression.py  test_run_d9b050cb_regression.py  test_run_fefcc761_regression.py  test_saia_ocr_agent.py  test_saia_ocr_repairs_and_confidence.py  test_sanity_final.py  test_seam_retry.py  test_trace_entity_analysis.py
frontend/: next.config.ts  (+2 more)
(+60 files in other folders)
